[package]
name = "bight"
version = "0.1.1"
edition = "2024"

[dependencies]
thiserror = "2.0"
crossterm = {version ="0.29", features = ["event-stream"]}
tokio = {version = "1.48", features = ["full"]}
futures = "0.3"
edit = "0.1.5"
mlua = { version = "0.11.4", features = ["async", "lua54", "send"] }
log = "0.4.28"
env_logger = "0.11.8"
arboard = {version = "3.6", features = ["wayland-data-control"]}
hashbrown = "0.16.1"
